Fixed text overlap issue on folder contents page, adding conmments to html

--- a/app/static/css/style.scss
+++ b/app/static/css/style.scss
@@ -931,7 +931,7 @@ body, html {
   font-size: 24px;
   width: 100px;
   height: 30px;
-  top: 54%;
+  top: 40%;
   left: -35%;
   transform: translate(50%, -50%);
 }
@@ -957,7 +957,7 @@ body, html {
 .folder-file-date > a{
   @extend .position-absolute;
   white-space: nowrap;
-  top: 50%;
+  top: 75%;
   left: -50%;
 }
 
